<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">补间动画示例</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alpha">透明度</string>
    <string name="rotate">旋转</string>
    <string name="scale">缩放</string>
    <string name="translate">移动</string>
    <string name="combination">综合</string>
    <string name="title_activity_tween_code">TweenCodeActivity</string>
    <string name="title_activity_tween_xml">TweenXMLActivity</string>
    <string name="ToCodeTween">代码补间动画</string>
    <string name="ToXMLTween">XML补间动画</string>
    <string name="title_activity_frame_animation">FrameAnimationActivity</string>
    <string name="frameAnimation">逐帧动画</string>
    <string name="beginFrameAnimation">开始逐帧动画</string>
    <string name="endFrameAnimation">结束逐帧动画</string>
    <string name="title_activity_property_animation">PropertyAnimationActivity</string>
    <string name="propertyAnimation">插值属性动画</string>
    <string name="turn">翻转</string>
    <string name="sd">缩小淡出</string>
    <string name="sd2">缩淡另式</string>
    <string name="down">落体</string>
    <string name="pwx">抛物</string>
    <string name="moreD">多动画</string>
    <string name="moreD2">多画次</string>
    <string name="scale2">左角缩</string>
    <string name="title_activity_layout_animation">LayoutAnimationActivity</string>
    <string name="layoutAnimation">布局动画</string>

</resources>
