<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/relativeLayout"
    tools:context="com.wang.tim.animationsample.PropertyAnimationActivity">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4">

    <Button
        android:id="@+id/turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn"/>
    <Button
        android:id="@+id/sd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sd"/>
    <Button
        android:id="@+id/sd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sd2"/>
    <Button
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down"/>
    <Button
        android:id="@+id/pwx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwx"/>
    <Button
        android:id="@+id/moreD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moreD"/>
    <Button
        android:id="@+id/moreD2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moreD2"/>
    <Button
        android:id="@+id/scale2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale2"/>
    </GridLayout>

    <ImageView
        android:id="@+id/testImage"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/test"/>

</RelativeLayout>
