<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wang.tim.animationsample.TweenXMLActivity">

    <Button
        android:id="@+id/alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha"/>
    <Button
        android:id="@+id/rotate"
        android:layout_toRightOf="@+id/alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate"/>
    <Button
        android:id="@+id/scale"
        android:layout_toRightOf="@+id/rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale"/>
    <Button
        android:id="@+id/translate"
        android:layout_toRightOf="@+id/scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"/>
    <Button
        android:id="@+id/combination"
        android:layout_toRightOf="@+id/translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/combination"/>
    <LinearLayout
        android:id="@+id/group"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <TextView
            android:id="@+id/text"
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/ic_launcher"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
